[FIX] web_responsive: remove z-index from list view header
This caused the list view header overlap form view header

--- a/web_responsive/static/src/css/web_responsive.scss
+++ b/web_responsive/static/src/css/web_responsive.scss
@@ -527,7 +527,7 @@ html .o_web_client .o_main .o_main_content {
         thead, thead tr:nth-child(1) th {
             position: sticky;
             top: 0;
-            z-index: 1;
+            // z-index: 1;
         }
         thead tr:nth-child(1) th {
             background-color: $o-list-footer-bg-color;
